# ChangeLog for dev-perl/Mouse
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mouse/ChangeLog,v 1.42 2014/10/20 02:11:51 patrick Exp $

  20 Oct 2014; Patrick Lauer <patrick@gentoo.org> Mouse-2.4.1.ebuild:
  Fix header

*Mouse-2.4.1 (19 Oct 2014)

  19 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org> -Mouse-1.20.0.ebuild,
  -Mouse-1.40.0.ebuild, +Mouse-2.4.1.ebuild:
  Version bump, ebuild by Kent Fredric.

*Mouse-1.50.0 (10 Feb 2013)

  10 Feb 2013; Torsten Veller <tove@gentoo.org> +Mouse-1.50.0.ebuild:
  Version bump

*Mouse-1.40.0 (19 Jan 2013)

  19 Jan 2013; Torsten Veller <tove@gentoo.org> +Mouse-1.40.0.ebuild:
  Version bump

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Mouse-0.990.0.ebuild:
  Cleanup

*Mouse-1.20.0 (30 Aug 2012)

  30 Aug 2012; Torsten Veller <tove@gentoo.org> +Mouse-1.20.0.ebuild:
  Version bump

*Mouse-0.990.0 (03 Jul 2012)

  03 Jul 2012; Torsten Veller <tove@gentoo.org> +Mouse-0.990.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  03 Jun 2012; Torsten Veller <tove@gentoo.org> -Mouse-0.40.ebuild,
  -Mouse-0.930.0.ebuild:
  Cleanup

  28 May 2012; Raúl Porcel <armin76@gentoo.org> Mouse-0.40.ebuild,
  Mouse-0.930.0.ebuild, Mouse-0.970.0.ebuild:
  Drop alpha/ia64/sparc keywords

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> Mouse-0.970.0.ebuild:
  Stable for HPPA (bug #412973).

*Mouse-0.970.0 (20 Oct 2011)

  20 Oct 2011; Torsten Veller <tove@gentoo.org> +Mouse-0.970.0.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Mouse-0.910.0.ebuild,
  -Mouse-0.920.0.ebuild:
  Cleanup

*Mouse-0.930.0 (19 May 2011)

  19 May 2011; Torsten Veller <tove@gentoo.org> +Mouse-0.930.0.ebuild:
  Version bump

*Mouse-0.920.0 (15 Apr 2011)

  15 Apr 2011; Torsten Veller <tove@gentoo.org> +Mouse-0.920.0.ebuild:
  Version bump

  02 Apr 2011; Torsten Veller <tove@gentoo.org> -Mouse-0.880.ebuild,