@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=>=virtual/perl-ExtUtils-ParseXS-2.21 test? ( dev-perl/Sub-Uplevel >=virtual/perl-Test-Simple-0.88 ) || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=>=virtual/perl-ExtUtils-ParseXS-2.21 test? ( dev-perl/Sub-Uplevel >=virtual/perl-Test-Simple-0.88 ) dev-lang/perl:=[-build(-)]
 DESCRIPTION=Moose minus the antlers
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Mouse/
 IUSE=test
 KEYWORDS=~amd64 hppa ~ppc ~x86 ~ppc-macos
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=virtual/perl-XSLoader || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=virtual/perl-XSLoader dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/G/GF/GFUJI/Mouse-0.97.tar.gz mirror://gentoo/Mouse-0.64-ppport.h.bz2
 _eclasses_=eutils	c91a1ac3fefc6b077094fb2e82c65af4	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	8f07545bdf1c7c3454ae8b04ebff2a5f	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=76d05295636d55fa3f089737cc2f2eb2
+_md5_=c0aac033a1fc23bb2195b643afb1c2ba
